# ocean4dvarnet-contrib

./: .coverage  .gitignore  .pypirc  404.html  README.md  contributions-list.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  test-and-lint.yml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: README.md
.github/actions/install-deps/: action.yml
.github/actions/publish-pypi/: action.yml
.github/actions/run-pylint/: action.yml
.github/actions/run-pytest/: action.yml
.github/disabled/: update_contrib.yml
.github/workflows/: deploy.yml  detect-changes.yml  lint-and-test.yml  main.yml  publish.yml  pytests-scripts.yml  test-and-lint.yml  update_contrib.yml  validate_contrib.yml
about/: index.html
contrib/: .gitignore  README.md  index.html
contrib/dz_lit_patch_predict/: README.md  metadatas.yml
contrib/gridding/: metadatas.yml
contrib/lorenz63/: README.md  __init__.py  data.py  index.html  lorenz63.py  metadatas.yml  pyproject.toml
contrib/lorenz63/data/: index.html
contrib/lorenz63/models/: index.html
contrib/lorenz63/reports/: coverage.xml
contrib/lorenz63/tests/: test_lorenz63.py
contrib/multi_domain_diag/: README.md  metadatas.yml
contrib/multimodal/: metadatas.yml
contrib/multiprior/: README.md  metadatas.yml
contrib/ose2osse/: README.md  metadatas.yml
contrib/ose_training/: README.md  __init__.py  index.html  metadatas.yml
contrib/ose_training/reports/: coverage.xml
contrib/qf_merge_patches/: README.md  metadatas.yml
contrib/qf_predict_ose_ssh_dc_2021/: metadatas.yml
contrib/scripts/: README.md  __init__.py  create_metadatas.py  create_readme.py  generate_contrib_docs.py
contrib/three_d/: README.md  metadatas.yml
contrib/toto5/: README.md  __init__.py  index.html  pyproject.toml  toto5.py
contrib/toto5/reports/: coverage.xml
contrib/toto5/tests/: conftest.py  test_toto5.py
contributing/: index.html
docs/: contributing.md  development.md  index.md  init-new-contrib.md  setting-up-the-development-environment.md
docs/api/lorenz63/: README.md
docs/api/lorenz63/reports/: coverage.xml
docs/contrib/: index.md
docs/contrib/lorenz63/: README.md  data.md  models.md
docs/contrib/lorenz63/reports/: coverage.xml
docs/contrib/ose_training/: README.md
docs/contrib/ose_training/reports/: coverage.xml
docs/contrib/scripts/: README.md
docs/contrib/scripts/reports/: coverage.xml
docs/contrib/toto5/: README.md
docs/contrib/toto5/reports/: coverage.xml
docs/scripts/: create_metadatas.md  create_readme.md  fix_contribs.md  generate_contrib_docs.md  index.md  init_contrib.md  manage_contrib_list.md  utils.md  validate_contrib_metadatas.md
docs/scripts/reports/: coverage.xml
init-new-contrib/: index.html
scripts/: README.md  __init__.py  create-doc.py  create-metadatas.py  create-readme.py  fix_contribs.py  generate_contrib_docs.py  index.html  init_contrib.py  manage_contrib_list.py  utils.py  validate.py  validate_contrib.py  validate_contrib_metadatas.py  validate_contributions.py
scripts/create_metadatas/: index.html
scripts/create_readme/: index.html
scripts/fix_contribs/: index.html
scripts/generate_contrib_docs/: index.html
scripts/init_contrib/: index.html
scripts/manage_contrib_list/: index.html
scripts/tests/: test_utils.py
scripts/utils/: index.html
scripts/validate_contrib_metadatas/: index.html
search/: search_index.json
setting-up-the-development-environment/: index.html
test/: generate_contrib_docs.md
tests/: conftest.py  test_create_metadatas.py  test_create_pyproject_files.py  test_create_readme.py  test_generate_contrib_docs.py  test_init.py  test_utils.py  test_validate_contrib.py
