[project]
name = "ocean4dvarnet-contrib"
version = "0.0.1"
description = "contributions for ocean4dvarnet package"
authors = [
  { name="Ronan Fablet", email="ronan.fablet@imt-atlantique.fr" },
  { name="Quentin Febvre", email="quentin.febvre@ifremer.fr" },
  { name="Pierre Haslee", email="author@example.com" },
  { name="DanieL Zhu", email="daniel.zhu@imt-atlantique.fr" },
  { name="Hugo Georgenthum", email="hugo.georgenthum@imt-atlantique.fr" },
  { name="Braux Emmanuel", email="emmanuel.braux@imt-atlantique.fr" },
]
readme = "README.md"
# Disable license informations when using setuptools as "builder backend"
#  https://github.com/pypa/packaging-problems/issues/870
#  https://github.com/pypa/setuptools/issues/4828
#license = "CECILL-C"
#license-files = ["LICEN[CS]E*"]
requires-python = "~=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []  

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pylint.format]
max-line-length = 120


[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "An awesome project to manage docs and tests"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

# Main dependencies (your project dependencies)
[tool.poetry.dependencies]
python = "^3.8"
# Ajoute ici tes autres dépendances principales (ex: Flask, requests)

# Development dependencies
[tool.poetry.dev-dependencies]
pytest = "^7.0"
tox = "^3.25"
tomli = "^2.0"
mkdocs = "^1.0"
mkdocstrings = "^0.17"
# Ajoute d'autres dépendances de développement si nécessaire (ex: flake8, black)

[tool.tox]
envlist = py38, py39, py310, py311

[testenv]
deps =
    pytest
    tomli
commands = pytest

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
