[project]
name = "ocean4dvarnet-contrib"
version = "0.0.1"
description = "contributions for ocean4dvarnet package"
authors = [
  { name="Ronan Fablet", email="ronan.fablet@imt-atlantique.fr" },
  { name="Quentin Febvre", email="quentin.febvre@ifremer.fr" },
  { name="Pierre Haslee", email="author@example.com" },
  { name="DanieL Zhu", email="daniel.zhu@imt-atlantique.fr" },
  { name="Hugo Georgenthum", email="hugo.georgenthum@imt-atlantique.fr" },
  { name="Braux Emmanuel", email="emmanuel.braux@imt-atlantique.fr" },
]
readme = "README.md"
# Disable license informations when using setuptools as "builder backend"
#  https://github.com/pypa/packaging-problems/issues/870
#  https://github.com/pypa/setuptools/issues/4828
#license = "CECILL-C"
#license-files = ["LICEN[CS]E*"]
requires-python = "~=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
    "pyyaml"
]  
# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
    "tomli",
    "flake8",
    "black",
    "pylint",
    "pytest-cov",
    "isort",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
]
contrib = [
    "pytorch",
    "torchvision",
    "torchinfo",
    "torchmetrics",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.'main']
init-hook = "import sys; sys.path.append('.')"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"


# --- POETRY ---
[tool.poetry]
name = "ocean4dvarnet-contrib"
version = "0.0.1"
description = "contributions for ocean4dvarnet package"
authors = [
  { name="Ronan Fablet", email="ronan.fablet@imt-atlantique.fr" },
  { name="Quentin Febvre", email="quentin.febvre@ifremer.fr" },
  { name="Pierre Haslee", email="author@example.com" },
  { name="DanieL Zhu", email="daniel.zhu@imt-atlantique.fr" },
  { name="Hugo Georgenthum", email="hugo.georgenthum@imt-atlantique.fr" },
  { name="Braux Emmanuel", email="emmanuel.braux@imt-atlantique.fr" },
]
license = "CECILL-C"
readme = "README.md"

# Main dependencies (your project dependencies)
[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"

# Development dependencies
[tool.poetry.dev-dependencies]
pytest = "^7.0"
tox = "^3.25"
tomli = "^2.0"
flake8 = "^5.0"
black = "^23.1"

# documentation dependencies
[tool.poetry.doc-dependencies]
mkdocs = "^1.4"
mkdocs-material = "^9.0"
mkdocstrings = "^0.18"
mkdocs-gen-files = "^0.5"


# Tox configuration has been moved to tox.ini
# [tool.tox]


